<resources>
    <string name="app_name">EscuchAR</string>

    <!-- STRINGS DEL ACTIVITY MAIN -->
    <string name="titulo_toolbar_main">EscuchAR</string>
    <string name="titulo_ejercitacion">Ejercitación</string>
    <string name="consigna_ejercitacion">Configure qué categoría desea practicar, el tipo de ejercicio y el ruido. No se le evaluará en esta sección.</string>
    <string name="boton_comenzarEntrenamiento">COMENZAR</string>
    <string name="titulo_evaluacion">Evaluación</string>
    <string name="consigna_evaluacion">Realice una evaluación. Configure qué categoría desea evaluar, seleccione el tipo de ruido y su intensidad. Los resultados serán almacenados para que puede ver su progreso.</string>
    <string name="boton_comenzarEvaluacion">COMENZAR</string>
    <string name="titulo_version">Versión 0.9.3</string>

    <!-- STRINGS DE LA ACTIVITY CONFIGURACIÓN -->
    <string name="titulo_toolbar_configuracion">Configuración</string>
    <string name="tv_configuracionBasica">Configuración basica</string>
    <string name="tv_categoria">Categoría</string>
    <string name="tv_subcategoria">Subcategoría</string>
    <string name="tv_ejercicio">Ejercicio</string>
    <string name="tv_configuracionAvanzada">Configuración avanzada</string>
    <string name="tv_ruido">Ruido</string>
    <string name="tv_entenamiento">Entrenamiento</string>
    <string name="switch_activadoDesactivado">Activado/Desactivado</string>
    <string name="boton_comenzarEjercicio">COMENZAR</string>
    <string name="tv_intensidadDelRuido">Itensidad del ruido</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="btn_seleccioneLaOpcionQueOyo">Pulse el botón y seleccione la opción que oyó</string>
    <string name="tv_escribaLoQueOyo">Pulse el boton y escriba lo que oyó</string>
    <string name="btn_option">Opcion</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="btn_finalizar">Finalizar</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_grabar">Grabar</string>
    <string name="btn_guardar">Guardar</string>
    <string name="btn_continuar">Continuar</string>

    <string name="tv_grabar">Grabar</string>
    <string name="tv_pausar">Pausar</string>
    <string name="tv_reproducir">Reproducir</string>

    <string name="tv_estimulo">Estimulo</string>
    <string name="tv_primeraRespuesta">Respuesta 1</string>
    <string name="tv_segundaRespuesta">Respuesta 2</string>

    <string name="tv_puntuacion">Puntuación</string>
    <string name="tv_fecha">Fecha</string>
    <string name="tv_errores">Errores</string>
    <string name="tv_intensidad">Intensidad</string>
    <string name="tv_configuracionDelEjercicio">Configuracion del ejercicio</string>
    <string name="tv_ajustarNivelDeRuido">Ajustar nivel de ruido</string>
    <string name="tv_detalleDelResultado">Detalle del resultado</string>
    <string name="tv_administrarSonidos">Administrar sonidos</string>
    <string name="tv_agregarSonido">Agregar sonido</string>
    <string name="tv_nombreDelSonido">Nombre del sonido</string>
    <string name="tv_categoriaDelSonido">Categoria del sonido</string>
    <string name="tv_grabarNuevoSonido">Grabar nuevo sonido</string>
    <string name="tv_palabraClave">Palabra clave</string>

    <string name="mi_seccionProfesional">Seccion Profesional</string>
    <string name="mi_personalizarApp">Personalizar App</string>
    <string name="mi_consultarResultados">Consultar Resultados</string>
    <string name="mi_administrarSonidos">Administrar Sonidos</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="texto">Texto</string>

    <string name="correct1">¡Correcto!</string>
    <string name="correct2">¡Genial!</string>
    <string name="correct3">¡Siga así!</string>
    <string name="correct4">¡Muy bien!</string>
    <string name="correct5">¡Perfecto!</string>
    <string name="correct6">Bravo.</string>
    <string name="correct7">¡Estupendo!</string>
    <string name="correct8">Excelente.</string>
    <string name="incorrect1">Incorrecto.</string>
    <string name="incorrect2">Pruebe con otro.</string>
    <string name="incorrect3">Vuelva a intentarlo.</string>
    
    <string name="descripcion_botonGrabar">Boton grabar audio</string>
    <string name="descripcion_botonPausar">Boton pausar audio</string>
    <string name="descripcion_botonReproducir">Boton reproducir audio</string>

    <string name="error_titulo">¡Te has equivocado 2 veces!</string>
    <string name="error_mensaje">La respuesta correcta era:</string>

</resources>