<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- TOOLBAR -->
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:title="@string/titulo_toolbar_main" />

        <!-- CARD EJERCITACION -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_ejercitacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_main"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imagen_ejercicio"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/img_exercise" />

                <TextView
                    android:id="@+id/tv_ejercicio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/titulo_ejercitacion"
                    android:textSize="22dp"
                    app:layout_constraintEnd_toEndOf="@+id/imagen_ejercicio"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imagen_ejercicio"
                    app:layout_constraintTop_toBottomOf="@+id/imagen_ejercicio" />

                <TextView
                    android:id="@+id/tv_consignaEjercicio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/consigna_ejercitacion"
                    android:textSize="18dp"
                    app:layout_constraintEnd_toEndOf="@+id/tv_ejercicio"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/tv_ejercicio"
                    app:layout_constraintTop_toBottomOf="@+id/tv_ejercicio" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_consignaEjercicio"
                    app:layout_constraintRight_toRightOf="@+id/tv_consignaEjercicio"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_consignaEjercicio"
                    android:layout_marginTop="16dp"
                    android:text="@string/boton_comenzarEntrenamiento"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!-- CARD EVALUACION -->
        <androidx.cardview.widget.CardView
            android:id="@+id/card_evaluacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/card_ejercitacion"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <ImageView
                    android:id="@+id/imagen_evaluacion"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:srcCompat="@drawable/img_test"
                    />

                <TextView
                    android:id="@+id/tv_evaluacion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/imagen_evaluacion"
                    app:layout_constraintRight_toRightOf="@+id/imagen_evaluacion"
                    app:layout_constraintLeft_toLeftOf="@+id/imagen_evaluacion"
                    android:layout_marginTop="16dp"
                    android:text="@string/titulo_evaluacion"
                    android:textSize="22dp"/>

                <TextView
                    android:id="@+id/tv_consignaEvaluacion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_evaluacion"
                    app:layout_constraintRight_toRightOf="@+id/tv_evaluacion"
                    app:layout_constraintLeft_toLeftOf="@+id/tv_evaluacion"
                    android:layout_marginTop="16dp"
                    android:text="@string/consigna_evaluacion"
                    android:textSize="18dp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tv_consignaEvaluacion"
                    app:layout_constraintRight_toRightOf="@+id/tv_consignaEvaluacion"
                    app:layout_constraintLeft_toLeftOf="@id/tv_consignaEvaluacion"
                    android:layout_marginTop="16dp"
                    android:text="@string/boton_comenzarEvaluacion"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>