<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".infrastructure.ui.view.AgregarSonidoFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:theme="@style/Global">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_agregarSonido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_primario"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back"
            app:title="@string/tv_agregarSonido"
            app:titleTextColor="#FFFFFF" />

        <Button
            android:id="@+id/btn_guardarSonido_agregarSonido"
            android:layout_width="140dp"
            android:layout_height="58dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/color_primario"
            android:text="@string/btn_guardar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/spinner_categoriaSonido_agregarSonido" />

        <TextView
            android:id="@+id/txt_nombreSonido_agregarSonido"
            style="@android:style/Widget.TextView.PopupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/tv_nombreDelSonido"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_agregarSonido" />

        <EditText
            android:id="@+id/editTxt_nombreSonido_agregarSonido"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:ems="10"
            android:hint="Nombre del nuevo sonido"
            android:inputType="textPersonName"
            android:textSize="18sp"
            android:theme="@style/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_nombreSonido_agregarSonido"
            app:layout_constraintTop_toBottomOf="@+id/txt_nombreSonido_agregarSonido" />

        <TextView
            android:id="@+id/txt_categoriaSonido_agregarSonido"
            style="@android:style/Widget.TextView.PopupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:gravity="center"
            android:minHeight="48dp"
            android:text="@string/tv_categoriaDelSonido"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/editTxt_nombreSonido_agregarSonido"
            app:layout_constraintTop_toBottomOf="@+id/editTxt_nombreSonido_agregarSonido" />

        <Spinner
            android:id="@+id/spinner_categoriaSonido_agregarSonido"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="Seleccione una categoria"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/txt_categoriaSonido_agregarSonido"
            app:layout_constraintTop_toBottomOf="@+id/txt_categoriaSonido_agregarSonido" />

        <Button
            android:id="@+id/btn_grabarSonido_agregarSonido"
            android:layout_width="140dp"
            android:layout_height="58dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/color_primario"
            android:text="@string/btn_grabar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/spinner_categoriaSonido_agregarSonido" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>