<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_resultadoItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/ic_default_background"
    android:padding="16dp"
    android:theme="@style/Global">

    <TextView
        android:id="@+id/tv_fecha_item"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_fecha"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_fechaOutput_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_fecha_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_fecha_item" />

    <TextView
        android:id="@+id/tv_categoria_item"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_categoria"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_fechaOutput_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_fechaOutput_item" />

    <TextView
        android:id="@+id/tv_categoriaOutput_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_categoria_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoria_item" />

    <TextView
        android:id="@+id/tv_subcategoria_item"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_subcategoria"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_categoriaOutput_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_categoriaOutput_item" />

    <TextView
        android:id="@+id/tv_subcategoriaOutput_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/tv_subcategoria_item"
        app:layout_constraintTop_toBottomOf="@id/tv_subcategoria_item" />

    <TextView
        android:id="@+id/tv_ejercicio_item"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_ejercicio"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_subcategoriaOutput_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_subcategoriaOutput_item" />

    <TextView
        android:id="@+id/tv_ejercicioOutput_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="16dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_ruido_item"
        app:layout_constraintStart_toStartOf="@+id/tv_ejercicio_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_ejercicio_item" />

    <TextView
        android:id="@+id/tv_ruido_item"
        style="@android:style/Widget.TextView.PopupMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tv_ruido"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/tv_ejercicioOutput_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_ejercicioOutput_item" />

    <TextView
        android:id="@+id/tv_ruidoOutput_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_ruido_item"
        app:layout_constraintTop_toBottomOf="@+id/tv_ruido_item" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_puntuacion_item"
            style="@android:style/Widget.TextView.PopupMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_puntuacion"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_puntuacionOutput_item"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_puntuacion_background"
            android:gravity="center"
            android:text="TextView"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_puntuacion_item" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>